--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "react-scripts": "0.9.5"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
@@ -32,6 +33,8 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0"
   }
 }
